--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -132,6 +132,8 @@
     <Content Include="Platos.aspx" />
     <Content Include="Favoritos.aspx" />
     <Content Include="Pedidos.aspx" />
+    <Content Include="Restaurante_Individual.aspx" />
+    <Content Include="Menu_Individual.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="MainPage.css" />
     <Content Include="Perfil.aspx" />
@@ -187,14 +189,12 @@
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
-
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
@@ -204,9 +204,7 @@
     </Compile>
     <Compile Include="Perfil.aspx.cs">
       <DependentUpon>Perfil.aspx</DependentUpon>
-
       <SubType>ASPXCodeBehind</SubType>
-
     </Compile>
     <Compile Include="Perfil.aspx.designer.cs">
       <DependentUpon>Perfil.aspx</DependentUpon>
@@ -214,9 +212,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recomendaciones.aspx.cs">
       <DependentUpon>Recomendaciones.aspx</DependentUpon>
-
       <SubType>ASPXCodeBehind</SubType>
-
     </Compile>
     <Compile Include="Recomendaciones.aspx.designer.cs">
       <DependentUpon>Recomendaciones.aspx</DependentUpon>
@@ -224,7 +220,6 @@
     <Compile Include="Registrar.aspx.cs">
       <DependentUpon>Registrar.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
-
     </Compile>
     <Compile Include="Registrar.aspx.designer.cs">
       <DependentUpon>Registrar.aspx</DependentUpon>
@@ -252,9 +247,7 @@
     </Compile>
     <Compile Include="Cesta.aspx.cs">
       <DependentUpon>Cesta.aspx</DependentUpon>
-
       <SubType>ASPXCodeBehind</SubType>
-
     </Compile>
     <Compile Include="Cesta.aspx.designer.cs">
       <DependentUpon>Cesta.aspx</DependentUpon>
@@ -262,7 +255,6 @@
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
-
     </Compile>
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
@@ -284,19 +276,30 @@
     <Compile Include="Favoritos.aspx.cs">
       <DependentUpon>Favoritos.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
-
     </Compile>
     <Compile Include="Favoritos.aspx.designer.cs">
       <DependentUpon>Favoritos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pedidos.aspx.cs">
       <DependentUpon>Pedidos.aspx</DependentUpon>
-
       <SubType>ASPXCodeBehind</SubType>
-
     </Compile>
     <Compile Include="Pedidos.aspx.designer.cs">
       <DependentUpon>Pedidos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Restaurante_Individual.aspx.cs">
+      <DependentUpon>Restaurante_Individual.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Restaurante_Individual.aspx.designer.cs">
+      <DependentUpon>Restaurante_Individual.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Menu_Individual.aspx.cs">
+      <DependentUpon>Menu_Individual.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Menu_Individual.aspx.designer.cs">
+      <DependentUpon>Menu_Individual.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
