--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -314,7 +314,12 @@
       <DependentUpon>CambiarMenu.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\library\library.csproj">
+      <Project>{577da5e8-ef25-4d7a-b0a4-30c6eaf6913c}</Project>
+      <Name>library</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
