--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -106,9 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
-    <Content Include="App_Data\database.mdf" />
-    <Content Include="App_Data\database_log.ldf">
-      <DependentUpon>database.mdf</DependentUpon>
+    <Content Include="App_Data\dbo.table.mdf" />
+    <Content Include="App_Data\dbo.table_log.ldf">
+      <DependentUpon>dbo.table.mdf</DependentUpon>
     </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
