--- a/Web/Web.config
+++ b/Web/Web.config
@@ -39,6 +39,6 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="Database" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\usuario\source\repos\SecondBite_v17\Web\APP_Data\Database1.mdf;Integrated Security=True;"/>
+		<add name="Database" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\yaros\source\repos\SecondBite_v17\Web\APP_Data\DataBase.mdf;Integrated Security=True;"/>
 	</connectionStrings>
 </configuration>
