--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -117,6 +117,9 @@
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Default.css" />
+    <Content Include="Images\cover2.jpeg" />
+    <Content Include="Images\cover3.jpeg" />
+    <Content Include="Images\cover4.jpeg" />
     <Content Include="Login.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -131,6 +134,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Cesta.aspx" />
     <Content Include="Contact.aspx" />
+    <Content Include="Quienessomos.aspx" />
     <Content Include="Recomendaciones.aspx" />
     <Content Include="Restaurantes.aspx" />
     <Content Include="Platos.aspx" />
@@ -216,6 +220,13 @@
       <DependentUpon>Perfil.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quienessomos.aspx.cs">
+      <DependentUpon>Quienessomos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Quienessomos.aspx.designer.cs">
+      <DependentUpon>Quienessomos.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Recomendaciones.aspx.cs">
       <DependentUpon>Recomendaciones.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
