--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -117,6 +117,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Default.css" />
+    <Content Include="Default.js" />
     <Content Include="Login.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
