--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -106,6 +106,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="APP_Data\DataBase.mdf" />
+    <Content Include="APP_Data\DataBase_log.ldf">
+      <DependentUpon>DataBase.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -340,7 +344,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="APP_Data\" />
+    <ProjectReference Include="..\library\library.csproj">
+      <Project>{577DA5E8-EF25-4D7A-B0A4-30C6EAF6913C}</Project>
+      <Name>library</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
