--- a/.gitignore
+++ b/.gitignore
@@ -271,6 +271,7 @@ ServiceFabricBackup/
 *- [Bb]ackup.rdl
 *- [Bb]ackup ([0-9]).rdl
 *- [Bb]ackup ([0-9][0-9]).rdl
+*.config
 
 # Microsoft Fakes
 FakesAssemblies/
