--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -146,6 +146,7 @@
     <Content Include="CambiarMenu.aspx" />
     <Content Include="Plato_Individual.aspx" />
     <Content Include="libman.json" />
+    <Content Include="FAQS.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="MainPage.css" />
     <Content Include="Perfil.aspx" />
@@ -182,6 +183,7 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
     <Content Include="styles.css" />
+    <Content Include="Menu.css" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -332,6 +334,13 @@
     </Compile>
     <Compile Include="Plato_Individual.aspx.designer.cs">
       <DependentUpon>Plato_Individual.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FAQS.aspx.cs">
+      <DependentUpon>FAQS.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FAQS.aspx.designer.cs">
+      <DependentUpon>FAQS.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
