48776654W y 74392984J: Arreglado boton ver detalles desde menu de cada restaurante

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -329,6 +329,7 @@
     </Compile>
     <Compile Include="Plato_Individual.aspx.cs">
       <DependentUpon>Plato_Individual.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Plato_Individual.aspx.designer.cs">
       <DependentUpon>Plato_Individual.aspx</DependentUpon>
