--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -105,9 +105,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="APP_Data\Database.mdf" />
-    <Content Include="APP_Data\Database_log.ldf">
-      <DependentUpon>Database.mdf</DependentUpon>
+    <Content Include="APP_Data\DataBase.mdf" />
+    <Content Include="APP_Data\DataBase_log.ldf">
+      <DependentUpon>DataBase.mdf</DependentUpon>
     </Content>
     <Content Include="Checkout.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -224,7 +224,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quienes.aspx.cs">
       <DependentUpon>Quienes.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Quienes.aspx.designer.cs">
       <DependentUpon>Quienes.aspx</DependentUpon>
