--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -182,6 +182,9 @@
     <Content Include="Site.Master" />
     <Content Include="styles.css" />
     <Content Include="Menu.css" />
+    <Content Include="Restaurantes.css" />
+    <Content Include="Platos.css" />
+    <Content Include="Menu_Individual.css" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -224,6 +227,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quienes.aspx.cs">
       <DependentUpon>Quienes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Quienes.aspx.designer.cs">
       <DependentUpon>Quienes.aspx</DependentUpon>
