--- a/Web/Web.config
+++ b/Web/Web.config
@@ -1,36 +1,53 @@
-﻿<%@ Page Title="PERFIL" Language="C#" MasterPageFile="~/Site.Master" AutoEventWireup="true" CodeBehind="Perfil.aspx.cs" Inherits="Web.Perfil" %>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!--
+  Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
+  https://go.microsoft.com/fwlink/?LinkId=169433
+  -->
+<configuration>
+  <system.web>
+    <compilation debug="true" targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" />
+    <pages>
+      <namespaces>
+        <add namespace="System.Web.Optimization" />
+      </namespaces>
+      <controls>
+        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+      </controls>
+    </pages>
+	  <authentication mode="Forms">
+		  <forms loginUrl="Login.aspx" timeout="30" />
+	  </authentication>
+  </system.web>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+    </compilers>
+  </system.codedom>
 
-<asp:Content ID="BodyContent" ContentPlaceHolderID="MainContent" runat="server">
-    <link href="Perfil.css" rel="stylesheet" />
-    <div class="ProfileContainer">
-        <div class="ProfileElement ProfilePic">
-            <a href="#">
-                <img src="/Images/kawaii.png" alt="Foto de perfil">
-            </a>
-        </div>
-        <div class="ProfileElement TextInfo">
-            <h1><asp:Label ID="lblNombreUsuario" runat="server" /></h1>
-            <p class="correo">Correo: <asp:Label ID="lblCorreo" runat="server" /></p>
-            <p class="nombre">Nombre: <asp:Label ID="lblNombre" runat="server" /></p>
-            <p class="telefono">Teléfono: <asp:Label ID="lblTelefono" runat="server" /></p>
-        </div>
-        <div class="ProfileElement ProfileActions">
-            <a href="Cesta.aspx" class="btn">Cesta</a>
-            <a href="Favoritos.aspx" class="btn">Favoritos</a>
-            <a href="Pedidos.aspx" class="btn">Pedidos</a>
-            <asp:Button ID="btnLogout" runat="server" Text="Logout" CssClass="btn btn-danger" OnClick="Logout_Click" />
-        </div>
-    </div>
-    <hr />
-    <h2>OPINIONES</h2>
-    <asp:Label ID="lblMensajeOpiniones" runat="server" Text="" Visible="False" />
-    <asp:Repeater ID="rptOpiniones" runat="server">
-        <ItemTemplate>
-            <div class="OpinionList">
-                <h3 class="titulo"><%# Eval("Descripcion") %></h3>
-                <p class="valoracion">Valoración: <%# Eval("Valoracion") %>/5 estrellas</p>
-            </div>
-            <hr />
-        </ItemTemplate>
-    </asp:Repeater>
-</asp:Content>
+	<connectionStrings>
+		<add name="Database"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataBase.mdf;Integrated Security=True;"
+         providerName="System.Data.SqlClient" />
+	</connectionStrings>
+</configuration>
+
+
+
