--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quienes.aspx.cs">
       <DependentUpon>Quienes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Quienes.aspx.designer.cs">
       <DependentUpon>Quienes.aspx</DependentUpon>
